Fixed image cropper on mobile

--- a/gamestore/src/components/CropImage.css
+++ b/gamestore/src/components/CropImage.css
@@ -23,23 +23,117 @@
     left: 0;
 }
 
-.CropContainer {
-    z-index: 2000;
+.CropContainer button:hover {
+    border-style: none;
+    color : rgb(67, 67, 67);
+    background-color: rgb(65, 0, 0);
+    border-width: 1px;
+    padding : 5px 35px 5px 35px;
+    text-align: center;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    align-self: center;
-    color: black;
-    background-color: white;
-    width: fit-content;
-    height: fit-content;  /* Same size for all screens */
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 10px; /* Rounded corners for modal */
-    overflow-y: auto;
+}
+
+.CropContainer button {
+    border-style: none;
+    color : white;
+    background-color: rgb(255, 0, 0);
+    border-width: 1px;
+    padding : 5px 35px 5px 35px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (min-width : 390px) {
+    .CropContainer {
+        z-index: 2000;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        color: black;
+        background-color: white;
+        width: fit-content;
+        height: fit-content;  /* Same size for all screens */
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+        border-radius: 10px; /* Rounded corners for modal */
+        overflow-y: auto;
+        text-align: center;
+    }
+
+    
+}
+
+@media (min-width : 390px) {
+    .CropContainer {
+        z-index: 2000;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        color: black;
+        background-color: white;
+        width: fit-content;
+        height: fit-content;  /* Same size for all screens */
+        min-width: 200px;
+        min-height: 500px;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+        border-radius: 10px; /* Rounded corners for modal */
+        overflow-y: auto;
+        text-align: center;
+    }
+
+    .imageCropper {
+        max-width: auto;
+        max-height: 300px;
+        align-items: center;
+        align-self: center;
+    }
+
+    .imageCropper img {
+        object-fit: contain;
+    }
+}
+
+@media (min-width : 768px) {
+    .CropContainer {
+        z-index: 2000;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        color: black;
+        background-color: white;
+        width: fit-content;
+        height: fit-content;  /* Same size for all screens */
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
+        border-radius: 10px; /* Rounded corners for modal */
+        overflow-y: auto;
+        text-align: center;
+    }
+}
+
+.finishCrop {
+    width : 100%;
+    align-items : center;
+    display: flex;
+    justify-content: center;
 }
